--- a/package.json
+++ b/package.json
@@ -1,7 +1,71 @@
 {
   "name": "dummy-uport-app",
   "version": "0.0.1",
+  "scripts":{
+	"build-es5": "./node_modules/.bin/babel src -d lib",
+    "build-dist": "./node_modules/.bin/webpack --config webpack.config.js"
+  },
   "dependencies": {
-    "uport-lib": "*"
+    "uport-lib": "*",
+	"async": "^2.0.1",
+    "ipfs-mini": "^1.0.1",
+    "json-loader": "^0.5.4",
+    "jsontokens": "^0.6.5",
+    "mobile-detect": "^1.3.5",
+    "nets": "^3.2.0",
+    "qr-image": "^3.1.0",
+    "qs": "^6.2.1",
+    "request": "^2.75.0",
+    "uport-persona": "^2.0.3",
+    "uport-registry": "^2.0.6",
+    "web3-provider-engine": "^8.0.8"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.18.0",
+    "babel-core": "^6.21.0",
+    "babel-eslint": "^7.1.1",
+    "babel-loader": "^6.2.10",
+    "babel-plugin-external-helpers": "^6.18.0",
+    "babel-plugin-transform-es2015-modules-umd": "^6.18.0",
+    "babel-plugin-transform-es2015-template-literals": "^6.8.0",
+    "babel-plugin-transform-es3-member-expression-literals": "^6.8.0",
+    "babel-plugin-transform-es3-property-literals": "^6.8.0",
+    "babel-plugin-transform-object-rest-spread": "^6.20.2",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-register": "^6.18.0",
+    "chai": "^3.5.0",
+    "codecov": "^1.0.1",
+    "condition-circle": "^1.5.0",
+    "cz-conventional-changelog": "^1.2.0",
+    "eslint": "^3.2.2",
+    "eth-lightwallet": "^2.4.3",
+    "ethereumjs-testrpc": "^3.0.3",
+    "ethereumjs-tx": "^1.1.1",
+    "husky": "^0.11.9",
+    "istanbul": "^0.4.5",
+    "istanbul-instrumenter-loader": "0.2.0",
+    "jsdoc-to-markdown": "^1.3.7",
+    "json-loader": "^0.5.4",
+    "karma": "^1.3.0",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-coverage": "^1.1.1",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-mocha": "^1.2.0",
+    "karma-mocha-reporter": "^2.2.0",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-safari-launcher": "^1.0.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^1.8.0",
+    "mocha": "^3.0.2",
+    "phantomjs-polyfill-object-assign": "^0.0.2",
+    "phantomjs-prebuilt": "^2.1.14",
+    "publish-release": "^1.3.2",
+    "reify": "^0.3.8",
+    "semantic-release": "^4.3.5",
+    "snazzy": "^5.0.0",
+    "standard": "^8.0.0-beta.5",
+    "validate-commit-msg": "^2.8.2",
+    "webpack": "2.1.0-beta.15"
   }
 }
