--- a/package.json
+++ b/package.json
@@ -6,19 +6,7 @@
     "build-dist": "./node_modules/.bin/webpack --config webpack.config.js"
   },
   "dependencies": {
-    "uport-lib": "*",
-	"async": "^2.0.1",
-    "ipfs-mini": "^1.0.1",
-    "json-loader": "^0.5.4",
-    "jsontokens": "^0.6.5",
-    "mobile-detect": "^1.3.5",
-    "nets": "^3.2.0",
-    "qr-image": "^3.1.0",
-    "qs": "^6.2.1",
-    "request": "^2.75.0",
-    "uport-persona": "^2.0.3",
-    "uport-registry": "^2.0.6",
-    "web3-provider-engine": "^8.0.8"
+    "uport-lib": "*"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
